Add rearrangement of info

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,14 +44,24 @@
 .cryptoContainer {
   margin-right: auto;
   margin-left: auto;
+  width: 600px;
   border-bottom: 1px solid rgb(224, 221, 199);
 
 }
 
 .card {
-  margin-right: 100%
+  text-align: left;
 }
 
 .rank {
   font-weight: bold;
 }
+
+.symbol {
+  color: rgb(112, 112, 112);
+}
+
+.dollar {
+  color: rgb(85, 167, 85);
+}
+
